--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+span {
+    color:black;
+}
+
+.badge-info {
+    color: #17a2b8;
+    background-color: #fff;
+}
